--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.etecmam.etecmamapp">
 
+
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/logo_app_etec"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_app_etec"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".sms.Servico"
+            android:enabled="true" />
+
         <activity android:name=".SobreActivity"></activity>
         <activity
             android:name=".CursoActivity"
