--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,20 @@
         android:roundIcon="@drawable/logo_app_etec"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- NOTIFICACAO PUSH -->
+        <service android:name=".notificacao.FirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".notificacao.FirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity android:name=".ContatoActivity"></activity>
 
         <service
